--- a/src/user/resource/forgotPassword.html
+++ b/src/user/resource/forgotPassword.html
@@ -180,16 +180,21 @@
         <td align="center" valign="top" width="600">
         <![endif]-->
                 <table border="0" cellpadding="0" cellspacing="0" width="100%"
-                    style="max-width: 600px; margin-top: 50px;">
-
+                    style="max-width: 600px; margin-top: 40px;">
                     <!-- start copy -->
-                    <tr>
-                        <td bgcolor="#ffffff" align="left"
-                            style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;">
-                            <h1 style="margin: 0 0 12px; font-size: 32px; font-weight: 400; line-height: 48px;">Hello
-                                {{username}}</h1>
-                            <p style="margin: 0;">We have received a request to change the password for your
-                                slotBooking account.
+                    <td bgcolor="#ffffff" align="left"
+                            style="padding: 19px 24px 19px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;">
+                            <div style="display: flex;align-items: center; text-decoration: none;">
+                            <img src="../../../src//logo/1686992.avif" alt="Logo" border="0" width="48"
+                                style="display: block; width: 48px; max-width: 48px; min-width: 48px; border-radius: 10px;">
+                                <h1 style = "padding: 10px; margin: 10px 10px 10px 10px;">Slot Booking App</h1>
+                            </div>
+                            <h1>
+                                Forgot Password
+                            </h1>
+                            <p style="margin: 0;">
+                                Hello, <br/>
+                                Click below button to reset your slotBooking app password
                             </p>
                         </td>
                     </tr>
@@ -200,13 +205,13 @@
                         <td align="left" bgcolor="#ffffff">
                             <table border="0" cellpadding="0" cellspacing="0" width="100%">
                                 <tr>
-                                    <td align="center" bgcolor="#ffffff" style="padding: 12px;">
+                                    <td align="left" bgcolor="#ffffff" style="padding: 0px 24px 12px 24px;">
                                         <table border="0" cellpadding="0" cellspacing="0">
                                             <tr>
                                                 <td align="center" bgcolor="#5d7c9f" style="border-radius: 6px;">
                                                     <a href="{{forgot_password_link}}" target="_blank"
                                                         rel="noopener noreferrer"
-                                                        style="display: inline-block; padding: 16px 36px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; color: #ffffff; text-decoration: none; border-radius: 6px;">Reset
+                                                        style="display: inline-block; padding: 16px 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; color: #ffffff; text-decoration: none; border-radius: 6px;">Forgot
                                                         Your Password</a>
                                                 </td>
                                             </tr>
@@ -218,12 +223,24 @@
                     </tr>
                     <!-- end button -->
 
+                                        <!-- start copy -->
+                                        <tr>
+                                            <td align="left" bgcolor="#ffffff"
+                                                style="padding: 12px 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;">
+                                                <p style="margin: 0;">
+                                                    If you did not ask to forgot your password, <br/>
+                                                    You can ignore this email.
+                                                </p>
+                    
+                                            </td>
+                                        </tr>
+                                        <!-- end copy -->
                     <!-- start copy -->
                     <tr>
                         <td align="left" bgcolor="#ffffff"
-                            style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px; border-bottom: 3px solid #d4dadf">
+                            style="padding: 12px 24px 24px 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px; border-bottom: 3px solid #d4dadf">
                             <p style="margin: 0;">Thank you,<br />
-                                The {{AppName}} Team</p>
+                                The slotBooking app Team</p>
                         </td>
                     </tr>
                     <!-- end copy -->
@@ -269,7 +286,6 @@
                         </td>
                     </tr> -->
                     <!-- end unsubscribe -->
-
                 </table>
                 <!--[if (gte mso 9)|(IE)]>
         </td>
@@ -279,10 +295,7 @@
             </td>
         </tr>
         <!-- end footer -->
-
     </table>
     <!-- end body -->
-
 </body>
-
 </html>
